--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.5.0",
+    "dotenv": "^16.0.0",
     "openzeppelin-solidity": "^2.2.0"
   }
 }
